--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,8 +4,8 @@ akka {
   actor {
     default-dispatcher {
       fork-join-executor {
-        parallelism-min = ${akka.actor.default-dispatcher.fork-join-executor.parallelism}
-        parallelism-max = ${akka.actor.default-dispatcher.fork-join-executor.parallelism}
+        parallelism-min = ${akka.actor.default-dispatcher.fork-join-executor.parallelism-min}
+        parallelism-max = ${akka.actor.default-dispatcher.fork-join-executor.parallelism-max}
       }
     }
     default-mailbox {
