--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <akka.version>2.3.9</akka.version>
         <quasar.version>0.6.2</quasar.version>
         <zephyr.version>1.0-SNAPSHOT</zephyr.version>
