--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,10 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <aspectj.version>1.8.1</aspectj.version>
-        <akka.version>2.3.12</akka.version>
-        <quasar.version>0.7.2</quasar.version>
+        <akka.version>2.3.14</akka.version>
+        <quasar.version>0.7.3</quasar.version>
         <zephyr.version>1.0-SNAPSHOT</zephyr.version>
-        <activeobject.version>1.0-SNAPSHOT</activeobject.version>
-        <jmh.version>1.10.3</jmh.version>
+        <jmh.version>1.11</jmh.version>
     </properties>
 
     <build>
@@ -47,48 +45,36 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.3</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>aspectj-maven-plugin</artifactId>
-                <version>1.7</version>
+                <groupId>org.jvnet.zephyr.activeobject</groupId>
+                <artifactId>activeobject-maven-plugin</artifactId>
+                <version>${zephyr.version}</version>
                 <configuration>
-                    <aspectLibraries>
-                        <aspectLibrary>
-                            <groupId>org.jvnet.zephyr.activeobject</groupId>
-                            <artifactId>activeobject-aspect</artifactId>
-                        </aspectLibrary>
-                    </aspectLibraries>
-                    <complianceLevel>1.7</complianceLevel>
+                    <includes>
+                        <include>org/jvnet/zephyr/benchmark/ZephyrActiveObjectRingBenchmark$Worker.class</include>
+                    </includes>
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.aspectj</groupId>
-                        <artifactId>aspectjtools</artifactId>
-                        <version>${aspectj.version}</version>
-                    </dependency>
-                </dependencies>
                 <executions>
                     <execution>
-                        <phase>compile</phase>
                         <goals>
-                            <goal>compile</goal>
-                            <goal>test-compile</goal>
+                            <goal>enhance</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.jvnet.zephyr.maven</groupId>
+                <groupId>org.jvnet.zephyr.remapping</groupId>
                 <artifactId>remapping-maven-plugin</artifactId>
                 <version>${zephyr.version}</version>
                 <configuration>
+                    <classesDirectory>${project.build.directory}/enhanced-classes</classesDirectory>
                     <includes>
                         <include>org/jvnet/zephyr/benchmark/ZephyrThreadRingBenchmark.class</include>
-                        <include>org/jvnet/zephyr/benchmark/ZephyrThreadRingBenchmark$*.class</include>
+                        <include>org/jvnet/zephyr/benchmark/ZephyrThreadRingBenchmark$Worker.class</include>
                     </includes>
                     <mappingEntries>
                         <mappingEntry>
@@ -104,26 +90,26 @@
                 <executions>
                     <execution>
                         <goals>
-                            <goal>remapping</goal>
+                            <goal>enhance</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.jvnet.zephyr.maven</groupId>
-                <artifactId>javaflow-maven-plugin</artifactId>
+                <groupId>org.jvnet.zephyr.easyflow</groupId>
+                <artifactId>easyflow-maven-plugin</artifactId>
                 <version>${zephyr.version}</version>
                 <configuration>
-                    <classesDirectory>${project.build.directory}/remapping-classes</classesDirectory>
+                    <classesDirectory>${project.build.directory}/enhanced-classes</classesDirectory>
                     <includes>
-                        <include>org/jvnet/zephyr/benchmark/ZephyrThreadRingBenchmark.class</include>
-                        <include>org/jvnet/zephyr/benchmark/ZephyrThreadRingBenchmark$*.class</include>
+                        <include>org/jvnet/zephyr/benchmark/ZephyrThreadRingBenchmark$Worker.class</include>
+                        <include>org/jvnet/zephyr/benchmark/ZephyrActiveObjectRingBenchmark$Worker.class</include>
                     </includes>
                 </configuration>
                 <executions>
                     <execution>
                         <goals>
-                            <goal>javaflow</goal>
+                            <goal>enhance</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -132,7 +118,7 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.6</version>
                 <configuration>
-                    <classesDirectory>${project.build.directory}/javaflow-classes</classesDirectory>
+                    <classesDirectory>${project.build.directory}/enhanced-classes</classesDirectory>
                 </configuration>
                 <executions>
                     <execution>
@@ -169,7 +155,7 @@
     <dependencies>
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-actor_2.10</artifactId>
+            <artifactId>akka-actor_2.11</artifactId>
             <version>${akka.version}</version>
         </dependency>
         <dependency>
@@ -183,44 +169,39 @@
             <version>${quasar.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.jvnet.zephyr.continuation</groupId>
-            <artifactId>continuation-javaflow</artifactId>
-            <version>${zephyr.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.jvnet.zephyr.thread</groupId>
             <artifactId>thread-api</artifactId>
             <version>${zephyr.version}</version>
-            <classifier>javaflow</classifier>
+            <classifier>remapped-easyflow</classifier>
         </dependency>
         <dependency>
             <groupId>org.jvnet.zephyr.thread</groupId>
             <artifactId>thread-continuation</artifactId>
             <version>${zephyr.version}</version>
-            <classifier>javaflow</classifier>
+            <classifier>remapped-easyflow</classifier>
         </dependency>
         <dependency>
             <groupId>org.jvnet.zephyr.jcl</groupId>
-            <artifactId>jcl-jdk7</artifactId>
+            <artifactId>jcl-jdk8</artifactId>
             <version>${zephyr.version}</version>
-            <classifier>javaflow</classifier>
-        </dependency>
-        <dependency>
-            <groupId>org.jvnet.zephyr.activeobject</groupId>
-            <artifactId>activeobject-aspect</artifactId>
-            <version>${activeobject.version}</version>
-            <classifier>javaflow</classifier>
-        </dependency>
-        <dependency>
-            <groupId>org.jvnet.zephyr.activeobject</groupId>
-            <artifactId>activeobject-aspect</artifactId>
-            <version>${activeobject.version}</version>
+            <classifier>remapped-easyflow</classifier>
         </dependency>
         <dependency>
             <groupId>org.jvnet.zephyr.activeobject</groupId>
             <artifactId>activeobject-runtime</artifactId>
-            <version>${activeobject.version}</version>
-            <classifier>javaflow</classifier>
+            <version>${zephyr.version}</version>
+            <classifier>remapped-easyflow</classifier>
+        </dependency>
+        <dependency>
+            <groupId>org.jvnet.zephyr.common</groupId>
+            <artifactId>common-util</artifactId>
+            <version>${zephyr.version}</version>
+            <classifier>remapped-easyflow</classifier>
+        </dependency>
+        <dependency>
+            <groupId>org.jvnet.zephyr.easyflow</groupId>
+            <artifactId>easyflow-runtime</artifactId>
+            <version>${zephyr.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
