--- a/pom.xml
+++ b/pom.xml
@@ -27,15 +27,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.jvnet.zephyr</groupId>
-    <artifactId>zephyr-benchmark</artifactId>
+    <groupId>org.jephyr</groupId>
+    <artifactId>jephyr-benchmark</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <akka.version>2.3.14</akka.version>
         <quasar.version>0.7.3</quasar.version>
-        <zephyr.version>1.0-SNAPSHOT</zephyr.version>
+        <jephyr.version>1.0-SNAPSHOT</jephyr.version>
         <jmh.version>1.11</jmh.version>
     </properties>
 
@@ -50,12 +50,12 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.jvnet.zephyr.activeobject</groupId>
+                <groupId>org.jephyr.activeobject</groupId>
                 <artifactId>activeobject-maven-plugin</artifactId>
-                <version>${zephyr.version}</version>
+                <version>${jephyr.version}</version>
                 <configuration>
                     <includes>
-                        <include>org/jvnet/zephyr/benchmark/ZephyrActiveObjectRingBenchmark$Worker.class</include>
+                        <include>org/jephyr/benchmark/JephyrActiveObjectRingBenchmark$Worker.class</include>
                     </includes>
                 </configuration>
                 <executions>
@@ -67,23 +67,23 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.jvnet.zephyr.remapping</groupId>
+                <groupId>org.jephyr.remapping</groupId>
                 <artifactId>remapping-maven-plugin</artifactId>
-                <version>${zephyr.version}</version>
+                <version>${jephyr.version}</version>
                 <configuration>
                     <classesDirectory>${project.build.directory}/enhanced-classes</classesDirectory>
                     <includes>
-                        <include>org/jvnet/zephyr/benchmark/ZephyrThreadRingBenchmark.class</include>
-                        <include>org/jvnet/zephyr/benchmark/ZephyrThreadRingBenchmark$Worker.class</include>
+                        <include>org/jephyr/benchmark/JephyrThreadRingBenchmark.class</include>
+                        <include>org/jephyr/benchmark/JephyrThreadRingBenchmark$Worker.class</include>
                     </includes>
                     <mappingEntries>
                         <mappingEntry>
                             <oldName>java/lang/Thread</oldName>
-                            <newName>org/jvnet/zephyr/integration/javase/java/lang/Thread</newName>
+                            <newName>org/jephyr/integration/javase/java/lang/Thread</newName>
                         </mappingEntry>
                         <mappingEntry>
                             <oldName>java/util/concurrent/locks/LockSupport</oldName>
-                            <newName>org/jvnet/zephyr/integration/javase/java/util/concurrent/locks/LockSupport</newName>
+                            <newName>org/jephyr/integration/javase/java/util/concurrent/locks/LockSupport</newName>
                         </mappingEntry>
                     </mappingEntries>
                 </configuration>
@@ -96,14 +96,14 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.jvnet.zephyr.easyflow</groupId>
+                <groupId>org.jephyr.easyflow</groupId>
                 <artifactId>easyflow-maven-plugin</artifactId>
-                <version>${zephyr.version}</version>
+                <version>${jephyr.version}</version>
                 <configuration>
                     <classesDirectory>${project.build.directory}/enhanced-classes</classesDirectory>
                     <includes>
-                        <include>org/jvnet/zephyr/benchmark/ZephyrThreadRingBenchmark$Worker.class</include>
-                        <include>org/jvnet/zephyr/benchmark/ZephyrActiveObjectRingBenchmark$Worker.class</include>
+                        <include>org/jephyr/benchmark/JephyrThreadRingBenchmark$Worker.class</include>
+                        <include>org/jephyr/benchmark/JephyrActiveObjectRingBenchmark$Worker.class</include>
                     </includes>
                 </configuration>
                 <executions>
@@ -169,45 +169,45 @@
             <version>${quasar.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.jvnet.zephyr.thread</groupId>
+            <groupId>org.jephyr.thread</groupId>
             <artifactId>thread-api</artifactId>
-            <version>${zephyr.version}</version>
+            <version>${jephyr.version}</version>
             <classifier>easyflow</classifier>
         </dependency>
         <dependency>
-            <groupId>org.jvnet.zephyr.thread</groupId>
+            <groupId>org.jephyr.thread</groupId>
             <artifactId>thread-continuation</artifactId>
-            <version>${zephyr.version}</version>
+            <version>${jephyr.version}</version>
             <classifier>easyflow</classifier>
         </dependency>
         <dependency>
-            <groupId>org.jvnet.zephyr.integration.javase</groupId>
+            <groupId>org.jephyr.integration.javase</groupId>
             <artifactId>javase-1.8</artifactId>
-            <version>${zephyr.version}</version>
+            <version>${jephyr.version}</version>
             <classifier>easyflow</classifier>
         </dependency>
         <dependency>
-            <groupId>org.jvnet.zephyr.activeobject</groupId>
+            <groupId>org.jephyr.activeobject</groupId>
             <artifactId>activeobject-runtime</artifactId>
-            <version>${zephyr.version}</version>
+            <version>${jephyr.version}</version>
             <classifier>easyflow</classifier>
         </dependency>
         <dependency>
-            <groupId>org.jvnet.zephyr.common</groupId>
+            <groupId>org.jephyr.common</groupId>
             <artifactId>common-util</artifactId>
-            <version>${zephyr.version}</version>
+            <version>${jephyr.version}</version>
             <classifier>easyflow</classifier>
         </dependency>
         <dependency>
-            <groupId>org.jvnet.zephyr.continuation</groupId>
+            <groupId>org.jephyr.continuation</groupId>
             <artifactId>continuation-api</artifactId>
-            <version>${zephyr.version}</version>
+            <version>${jephyr.version}</version>
             <classifier>easyflow</classifier>
         </dependency>
         <dependency>
-            <groupId>org.jvnet.zephyr.continuation</groupId>
+            <groupId>org.jephyr.continuation</groupId>
             <artifactId>continuation-easyflow</artifactId>
-            <version>${zephyr.version}</version>
+            <version>${jephyr.version}</version>
             <classifier>easyflow</classifier>
         </dependency>
         <dependency>
